@@ -1,3 +1,8 @@
+2006-01-12  Philip Langdale  <philipl@mail.utexas.edu>
+
+	* po/POTFILES.in: Add this in preparation for
+	localisation support.
+
 2006-01-04  Philip Langdale  <philipl@mail.utexas.edu>
 
 	* configure.ac
